Update transportation info: Add details about Japanese cars, Tesla EVs, and large vehicles

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -731,11 +731,11 @@
                     <div class="card-content">
                         <div class="country-section japan">
                             <div class="country-label">🇯🇵 日本</div>
-                            <p>電車が主流<br>時間厳守<br>コンパクト</p>
+                            <p>電車が主流<br>時間厳守<br>コンパクトカー</p>
                         </div>
                         <div class="country-section usa">
                             <div class="country-label">🇺🇸 アメリカ</div>
-                            <p>車社会<br>広大な道路<br>ドライブスルー文化</p>
+                            <p>車社会<br>日本車・テスラ多数<br>ピックアップなど大型車</p>
                         </div>
                     </div>
                 </div>
@@ -817,9 +817,9 @@
                         <p>知らない人とも気軽に会話</p>
                     </div>
                     <div class="surprise-item">
-                        <div class="surprise-icon">🚘</div>
-                        <h3>車が巨大</h3>
-                        <p>ピックアップトラックだらけ</p>
+                        <div class="surprise-icon">🚙</div>
+                        <h3>日本車とEV天国</h3>
+                        <p>トヨタ・ホンダ・テスラが街中に！大型ピックアップも多数</p>
                     </div>
                     <div class="surprise-item">
                         <div class="surprise-icon">💵</div>
